<resources>
    <string name="app_name">Sliide</string>
    <string name="users_title">Users</string>
    <string name="created_on">Created on</string>
    <string name="colon">:</string>
    <string name="delete_user">Delete user</string>
    <string name="are_you_sure_delete_user">Are you sure you want to remove user %1$s?</string>
    <string name="yes">Yes</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="name_required">Name required</string>
    <string name="email_required">Email required</string>
</resources>